Fix background content overflow

--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -47,28 +47,25 @@ code {
 
 .circle1,
 .circle2 {
-  height: 40rem;
-  width: 40rem;
-  position: absolute;
+  height: calc(max(50vw, 50vh));
+  width: calc(max(50vw, 50vh));
+  position: fixed;
   border-radius: 50%;
-  -webkit-backdrop-filter: blur(40rem);
-  backdrop-filter: blur(40rem);
-  -webkit-filter: blur(40px);
   filter: blur(40px);
 }
 
 .circle1 {
   background: #3f3e5c;
   background: linear-gradient(280deg, #3f3e5c 0%, #3a3c4a 100%);
-  top: -10rem;
-  left: -10rem;
+  top: -10vw;
+  left: -10vw;
 }
 
 .circle2 {
   background: #34334a;
   background: linear-gradient(253deg, #34334a 0%, #2c2e3d 100%);
-  bottom: -10rem;
-  right: -2rem;
+  bottom: -15vw;
+  right: -5vw;
 }
 
 .main-content {
